--- a/ExploratoryAnalysis.ipynb
+++ b/ExploratoryAnalysis.ipynb
@@ -2876,6 +2876,282 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf.to_csv('file3.csv', header=True, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ETH</th>\n",
+       "      <th>BTC</th>\n",
+       "      <th>XRP</th>\n",
+       "      <th>LTC</th>\n",
+       "      <th>XLM</th>\n",
+       "      <th>Palladium</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>HSI</th>\n",
+       "      <th>N225</th>\n",
+       "      <th>SP500</th>\n",
+       "      <th>NVIDIA</th>\n",
+       "      <th>AMD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-01-01</th>\n",
+       "      <td>0.948024</td>\n",
+       "      <td>434.33</td>\n",
+       "      <td>0.005955</td>\n",
+       "      <td>3.51</td>\n",
+       "      <td>0.001748</td>\n",
+       "      <td>562.00</td>\n",
+       "      <td>1060.2</td>\n",
+       "      <td>2810.900488</td>\n",
+       "      <td>174.137258</td>\n",
+       "      <td>2035.4</td>\n",
+       "      <td>32.96</td>\n",
+       "      <td>2.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-02</th>\n",
+       "      <td>0.937124</td>\n",
+       "      <td>433.44</td>\n",
+       "      <td>0.006065</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.001741</td>\n",
+       "      <td>562.00</td>\n",
+       "      <td>1060.2</td>\n",
+       "      <td>2810.900488</td>\n",
+       "      <td>174.137258</td>\n",
+       "      <td>2035.4</td>\n",
+       "      <td>32.96</td>\n",
+       "      <td>2.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-03</th>\n",
+       "      <td>0.971905</td>\n",
+       "      <td>430.01</td>\n",
+       "      <td>0.006017</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>0.001744</td>\n",
+       "      <td>562.00</td>\n",
+       "      <td>1060.2</td>\n",
+       "      <td>2810.900488</td>\n",
+       "      <td>174.137258</td>\n",
+       "      <td>2035.4</td>\n",
+       "      <td>32.96</td>\n",
+       "      <td>2.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-04</th>\n",
+       "      <td>0.954480</td>\n",
+       "      <td>433.09</td>\n",
+       "      <td>0.005958</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.001748</td>\n",
+       "      <td>544.20</td>\n",
+       "      <td>1075.2</td>\n",
+       "      <td>2735.571521</td>\n",
+       "      <td>168.805923</td>\n",
+       "      <td>2009.1</td>\n",
+       "      <td>32.37</td>\n",
+       "      <td>2.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-01-05</th>\n",
+       "      <td>0.950176</td>\n",
+       "      <td>431.96</td>\n",
+       "      <td>0.006044</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>0.001721</td>\n",
+       "      <td>535.75</td>\n",
+       "      <td>1078.4</td>\n",
+       "      <td>2717.819530</td>\n",
+       "      <td>168.101637</td>\n",
+       "      <td>2011.7</td>\n",
+       "      <td>32.89</td>\n",
+       "      <td>2.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-27</th>\n",
+       "      <td>682.640000</td>\n",
+       "      <td>26272.29</td>\n",
+       "      <td>0.283039</td>\n",
+       "      <td>127.52</td>\n",
+       "      <td>0.144973</td>\n",
+       "      <td>2345.90</td>\n",
+       "      <td>1883.2</td>\n",
+       "      <td>3384.532298</td>\n",
+       "      <td>243.878289</td>\n",
+       "      <td>3681.5</td>\n",
+       "      <td>519.75</td>\n",
+       "      <td>91.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-28</th>\n",
+       "      <td>730.400000</td>\n",
+       "      <td>27084.81</td>\n",
+       "      <td>0.247958</td>\n",
+       "      <td>130.05</td>\n",
+       "      <td>0.144375</td>\n",
+       "      <td>2351.80</td>\n",
+       "      <td>1880.4</td>\n",
+       "      <td>3375.306073</td>\n",
+       "      <td>245.684462</td>\n",
+       "      <td>3681.5</td>\n",
+       "      <td>516.00</td>\n",
+       "      <td>91.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-29</th>\n",
+       "      <td>731.520000</td>\n",
+       "      <td>27362.44</td>\n",
+       "      <td>0.220962</td>\n",
+       "      <td>129.04</td>\n",
+       "      <td>0.138815</td>\n",
+       "      <td>2344.30</td>\n",
+       "      <td>1882.9</td>\n",
+       "      <td>3407.867924</td>\n",
+       "      <td>252.217874</td>\n",
+       "      <td>3681.5</td>\n",
+       "      <td>517.73</td>\n",
+       "      <td>90.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-30</th>\n",
+       "      <td>751.620000</td>\n",
+       "      <td>28840.95</td>\n",
+       "      <td>0.211828</td>\n",
+       "      <td>129.47</td>\n",
+       "      <td>0.131913</td>\n",
+       "      <td>2378.40</td>\n",
+       "      <td>1893.4</td>\n",
+       "      <td>3482.085826</td>\n",
+       "      <td>251.083591</td>\n",
+       "      <td>3681.5</td>\n",
+       "      <td>525.83</td>\n",
+       "      <td>92.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-31</th>\n",
+       "      <td>737.800000</td>\n",
+       "      <td>29001.72</td>\n",
+       "      <td>0.219846</td>\n",
+       "      <td>124.69</td>\n",
+       "      <td>0.128370</td>\n",
+       "      <td>2453.80</td>\n",
+       "      <td>1895.1</td>\n",
+       "      <td>3492.863033</td>\n",
+       "      <td>251.083591</td>\n",
+       "      <td>3681.5</td>\n",
+       "      <td>522.20</td>\n",
+       "      <td>91.71</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1827 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   ETH       BTC       XRP     LTC       XLM  Palladium  \\\n",
+       "Date                                                                      \n",
+       "2016-01-01    0.948024    434.33  0.005955    3.51  0.001748     562.00   \n",
+       "2016-01-02    0.937124    433.44  0.006065    3.50  0.001741     562.00   \n",
+       "2016-01-03    0.971905    430.01  0.006017    3.48  0.001744     562.00   \n",
+       "2016-01-04    0.954480    433.09  0.005958    3.50  0.001748     544.20   \n",
+       "2016-01-05    0.950176    431.96  0.006044    3.47  0.001721     535.75   \n",
+       "...                ...       ...       ...     ...       ...        ...   \n",
+       "2020-12-27  682.640000  26272.29  0.283039  127.52  0.144973    2345.90   \n",
+       "2020-12-28  730.400000  27084.81  0.247958  130.05  0.144375    2351.80   \n",
+       "2020-12-29  731.520000  27362.44  0.220962  129.04  0.138815    2344.30   \n",
+       "2020-12-30  751.620000  28840.95  0.211828  129.47  0.131913    2378.40   \n",
+       "2020-12-31  737.800000  29001.72  0.219846  124.69  0.128370    2453.80   \n",
+       "\n",
+       "              Gold          HSI        N225   SP500  NVIDIA    AMD  \n",
+       "Date                                                                \n",
+       "2016-01-01  1060.2  2810.900488  174.137258  2035.4   32.96   2.87  \n",
+       "2016-01-02  1060.2  2810.900488  174.137258  2035.4   32.96   2.87  \n",
+       "2016-01-03  1060.2  2810.900488  174.137258  2035.4   32.96   2.87  \n",
+       "2016-01-04  1075.2  2735.571521  168.805923  2009.1   32.37   2.77  \n",
+       "2016-01-05  1078.4  2717.819530  168.101637  2011.7   32.89   2.75  \n",
+       "...            ...          ...         ...     ...     ...    ...  \n",
+       "2020-12-27  1883.2  3384.532298  243.878289  3681.5  519.75  91.81  \n",
+       "2020-12-28  1880.4  3375.306073  245.684462  3681.5  516.00  91.60  \n",
+       "2020-12-29  1882.9  3407.867924  252.217874  3681.5  517.73  90.62  \n",
+       "2020-12-30  1893.4  3482.085826  251.083591  3681.5  525.83  92.29  \n",
+       "2020-12-31  1895.1  3492.863033  251.083591  3681.5  522.20  91.71  \n",
+       "\n",
+       "[1827 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newdf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
