--- a/ExploratoryAnalysis.ipynb
+++ b/ExploratoryAnalysis.ipynb
@@ -2866,6 +2866,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save data into csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
