--- a/API_DATA.ipynb
+++ b/API_DATA.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bbc05387",
+   "id": "83bdccdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6e0a00f8",
+   "id": "4e9b12e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f1f14d98",
+   "id": "8e6209de",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9c123c5",
+   "id": "3de6ba59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a34e833",
+   "id": "fa4e069e",
    "metadata": {},
    "outputs": [
     {
@@ -212,113 +212,113 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-12-28</th>\n",
-       "      <td>17.820000</td>\n",
-       "      <td>3923.918701</td>\n",
-       "      <td>137.647018</td>\n",
-       "      <td>1279.900024</td>\n",
-       "      <td>25504.199219</td>\n",
-       "      <td>32.510830</td>\n",
-       "      <td>33.412498</td>\n",
-       "      <td>1240.099976</td>\n",
-       "      <td>0.121383</td>\n",
-       "      <td>0.376852</td>\n",
-       "      <td>2485.739990</td>\n",
-       "      <td>20014.769531</td>\n",
+       "      <th>2021-12-17</th>\n",
+       "      <td>137.750000</td>\n",
+       "      <td>46202.144531</td>\n",
+       "      <td>3879.486572</td>\n",
+       "      <td>1803.800049</td>\n",
+       "      <td>23192.599609</td>\n",
+       "      <td>144.338409</td>\n",
+       "      <td>278.010010</td>\n",
+       "      <td>1782.599976</td>\n",
+       "      <td>0.255147</td>\n",
+       "      <td>0.799291</td>\n",
+       "      <td>4620.640137</td>\n",
+       "      <td>28545.679688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-12-29</th>\n",
+       "      <th>2021-12-18</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>3820.408691</td>\n",
-       "      <td>138.018341</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>31.565002</td>\n",
+       "      <td>46848.777344</td>\n",
+       "      <td>3960.860107</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.118036</td>\n",
-       "      <td>0.367252</td>\n",
+       "      <td>148.801407</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-30</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3865.952637</td>\n",
-       "      <td>139.859451</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>31.976517</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.117430</td>\n",
-       "      <td>0.369581</td>\n",
+       "      <td>0.255201</td>\n",
+       "      <td>0.827379</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-12-31</th>\n",
-       "      <td>18.459999</td>\n",
-       "      <td>3742.700439</td>\n",
-       "      <td>133.368256</td>\n",
-       "      <td>1278.300049</td>\n",
-       "      <td>25845.699219</td>\n",
-       "      <td>30.468224</td>\n",
-       "      <td>33.375000</td>\n",
-       "      <td>1253.900024</td>\n",
-       "      <td>0.112813</td>\n",
-       "      <td>0.352706</td>\n",
-       "      <td>2506.850098</td>\n",
+       "      <th>2021-12-19</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46707.015625</td>\n",
+       "      <td>3922.592529</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>153.077637</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.253265</td>\n",
+       "      <td>0.835033</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-01</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3843.520020</td>\n",
-       "      <td>140.819412</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>31.979931</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.115930</td>\n",
-       "      <td>0.364771</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2021-12-20</th>\n",
+       "      <td>135.800003</td>\n",
+       "      <td>46880.277344</td>\n",
+       "      <td>3933.844482</td>\n",
+       "      <td>1793.699951</td>\n",
+       "      <td>22744.900391</td>\n",
+       "      <td>152.628677</td>\n",
+       "      <td>277.190002</td>\n",
+       "      <td>1743.699951</td>\n",
+       "      <td>0.257717</td>\n",
+       "      <td>0.879828</td>\n",
+       "      <td>4568.020020</td>\n",
+       "      <td>27937.810547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-21</th>\n",
+       "      <td>144.250000</td>\n",
+       "      <td>48936.613281</td>\n",
+       "      <td>4020.260010</td>\n",
+       "      <td>1787.900024</td>\n",
+       "      <td>22971.300781</td>\n",
+       "      <td>154.927094</td>\n",
+       "      <td>290.750000</td>\n",
+       "      <td>1790.900024</td>\n",
+       "      <td>0.267563</td>\n",
+       "      <td>0.947646</td>\n",
+       "      <td>4649.229980</td>\n",
+       "      <td>28517.589844</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1097 rows × 12 columns</p>\n",
+       "<p>2182 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  AMD      BTC-USD     ETH-USD         GC=F           HSI  \\\n",
-       "Date                                                                        \n",
-       "2016-01-01        NaN   434.334015    0.948024          NaN           NaN   \n",
-       "2016-01-02        NaN   433.437988    0.937124          NaN           NaN   \n",
-       "2016-01-03        NaN   430.010986    0.971905          NaN           NaN   \n",
-       "2016-01-04   2.770000   433.091003    0.954480  1075.099976  21327.099609   \n",
-       "2016-01-05   2.750000   431.959991    0.950176  1078.400024  21188.699219   \n",
-       "...               ...          ...         ...          ...           ...   \n",
-       "2018-12-28  17.820000  3923.918701  137.647018  1279.900024  25504.199219   \n",
-       "2018-12-29        NaN  3820.408691  138.018341          NaN           NaN   \n",
-       "2018-12-30        NaN  3865.952637  139.859451          NaN           NaN   \n",
-       "2018-12-31  18.459999  3742.700439  133.368256  1278.300049  25845.699219   \n",
-       "2019-01-01        NaN  3843.520020  140.819412          NaN           NaN   \n",
+       "                   AMD       BTC-USD      ETH-USD         GC=F           HSI  \\\n",
+       "Date                                                                           \n",
+       "2016-01-01         NaN    434.334015     0.948024          NaN           NaN   \n",
+       "2016-01-02         NaN    433.437988     0.937124          NaN           NaN   \n",
+       "2016-01-03         NaN    430.010986     0.971905          NaN           NaN   \n",
+       "2016-01-04    2.770000    433.091003     0.954480  1075.099976  21327.099609   \n",
+       "2016-01-05    2.750000    431.959991     0.950176  1078.400024  21188.699219   \n",
+       "...                ...           ...          ...          ...           ...   \n",
+       "2021-12-17  137.750000  46202.144531  3879.486572  1803.800049  23192.599609   \n",
+       "2021-12-18         NaN  46848.777344  3960.860107          NaN           NaN   \n",
+       "2021-12-19         NaN  46707.015625  3922.592529          NaN           NaN   \n",
+       "2021-12-20  135.800003  46880.277344  3933.844482  1793.699951  22744.900391   \n",
+       "2021-12-21  144.250000  48936.613281  4020.260010  1787.900024  22971.300781   \n",
        "\n",
-       "              LTC-USD       NVDA         PA=F   XLM-USD   XRP-USD  \\\n",
-       "Date                                                                \n",
-       "2016-01-01   3.508980        NaN          NaN  0.001748  0.005955   \n",
-       "2016-01-02   3.502160        NaN          NaN  0.001741  0.006065   \n",
-       "2016-01-03   3.483070        NaN          NaN  0.001744  0.006017   \n",
-       "2016-01-04   3.495390   8.092500   542.950012  0.001748  0.005958   \n",
-       "2016-01-05   3.469670   8.222500   535.099976  0.001721  0.006044   \n",
-       "...               ...        ...          ...       ...       ...   \n",
-       "2018-12-28  32.510830  33.412498  1240.099976  0.121383  0.376852   \n",
-       "2018-12-29  31.565002        NaN          NaN  0.118036  0.367252   \n",
-       "2018-12-30  31.976517        NaN          NaN  0.117430  0.369581   \n",
-       "2018-12-31  30.468224  33.375000  1253.900024  0.112813  0.352706   \n",
-       "2019-01-01  31.979931        NaN          NaN  0.115930  0.364771   \n",
+       "               LTC-USD        NVDA         PA=F   XLM-USD   XRP-USD  \\\n",
+       "Date                                                                  \n",
+       "2016-01-01    3.508980         NaN          NaN  0.001748  0.005955   \n",
+       "2016-01-02    3.502160         NaN          NaN  0.001741  0.006065   \n",
+       "2016-01-03    3.483070         NaN          NaN  0.001744  0.006017   \n",
+       "2016-01-04    3.495390    8.092500   542.950012  0.001748  0.005958   \n",
+       "2016-01-05    3.469670    8.222500   535.099976  0.001721  0.006044   \n",
+       "...                ...         ...          ...       ...       ...   \n",
+       "2021-12-17  144.338409  278.010010  1782.599976  0.255147  0.799291   \n",
+       "2021-12-18  148.801407         NaN          NaN  0.255201  0.827379   \n",
+       "2021-12-19  153.077637         NaN          NaN  0.253265  0.835033   \n",
+       "2021-12-20  152.628677  277.190002  1743.699951  0.257717  0.879828   \n",
+       "2021-12-21  154.927094  290.750000  1790.900024  0.267563  0.947646   \n",
        "\n",
        "                  ^GSPC         ^N225  \n",
        "Date                                   \n",
@@ -328,13 +328,13 @@
        "2016-01-04  2012.660034  18450.980469  \n",
        "2016-01-05  2016.709961  18374.000000  \n",
        "...                 ...           ...  \n",
-       "2018-12-28  2485.739990  20014.769531  \n",
-       "2018-12-29          NaN           NaN  \n",
-       "2018-12-30          NaN           NaN  \n",
-       "2018-12-31  2506.850098           NaN  \n",
-       "2019-01-01          NaN           NaN  \n",
+       "2021-12-17  4620.640137  28545.679688  \n",
+       "2021-12-18          NaN           NaN  \n",
+       "2021-12-19          NaN           NaN  \n",
+       "2021-12-20  4568.020020  27937.810547  \n",
+       "2021-12-21  4649.229980  28517.589844  \n",
        "\n",
-       "[1097 rows x 12 columns]"
+       "[2182 rows x 12 columns]"
       ]
      },
      "execution_count": 6,
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb388bf1",
+   "id": "c295f487",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>AMD</th>\n",
-       "      <td>343</td>\n",
+       "      <td>678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BTC-USD</th>\n",
@@ -387,43 +387,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ETH-USD</th>\n",
-       "      <td>0</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GC=F</th>\n",
-       "      <td>346</td>\n",
+       "      <td>680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HSI</th>\n",
-       "      <td>344</td>\n",
+       "      <td>864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LTC-USD</th>\n",
-       "      <td>0</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NVDA</th>\n",
-       "      <td>343</td>\n",
+       "      <td>678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PA=F</th>\n",
-       "      <td>351</td>\n",
+       "      <td>697</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XLM-USD</th>\n",
-       "      <td>0</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XRP-USD</th>\n",
-       "      <td>0</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>^GSPC</th>\n",
-       "      <td>343</td>\n",
+       "      <td>678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>^N225</th>\n",
-       "      <td>359</td>\n",
+       "      <td>723</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -431,18 +431,18 @@
       ],
       "text/plain": [
        "          NA\n",
-       "AMD      343\n",
+       "AMD      678\n",
        "BTC-USD    0\n",
-       "ETH-USD    0\n",
-       "GC=F     346\n",
-       "HSI      344\n",
-       "LTC-USD    0\n",
-       "NVDA     343\n",
-       "PA=F     351\n",
-       "XLM-USD    0\n",
-       "XRP-USD    0\n",
-       "^GSPC    343\n",
-       "^N225    359"
+       "ETH-USD   17\n",
+       "GC=F     680\n",
+       "HSI      864\n",
+       "LTC-USD   17\n",
+       "NVDA     678\n",
+       "PA=F     697\n",
+       "XLM-USD   18\n",
+       "XRP-USD   17\n",
+       "^GSPC    678\n",
+       "^N225    723"
       ]
      },
      "execution_count": 7,
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fb40d09a",
+   "id": "cc5a4064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7e2954d4",
+   "id": "33522e29",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6bb09606",
+   "id": "9e01ee3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f6e83fd3",
+   "id": "a7e24b8d",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "32581979",
+   "id": "2c1878ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "10b037fa",
+   "id": "7d99fd40",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4c056852",
+   "id": "957524ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2bdfeec3",
+   "id": "69c323ae",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bd0d7d62",
+   "id": "712c36e5",
    "metadata": {},
    "outputs": [
     {
@@ -858,18 +858,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "fd4f3d9b",
+   "execution_count": 17,
+   "id": "26b92d03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_original.to_csv('data.csv')"
+    "#df_original.to_csv('data.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8192a6",
+   "id": "55b4d707",
    "metadata": {},
    "outputs": [],
    "source": []
